dimagi-SalesforceFB/src/objects/Country__c.object
<CustomObject>
    <description>The different countries we work in</description>
    <fields>
        <fullName>Active_Contracts__c</fullName>
        <inlineHelpText>How many Active Contracts are there.</inlineHelpText>
        <label>Active Contracts</label>
        <summaryForeignKey>Contract_Country__c.Country__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>Auto-populated to show all sectors for deployments in this country.</inlineHelpText>
        <label>Sector</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <inlineHelpText>Corresponding country code (always 2 characters)</inlineHelpText>
        <label>Country Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Owning Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Inc</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <inlineHelpText>Stores a concatenation of all sub sectors that a deployment in this country have.</inlineHelpText>
        <label>Sub Sector</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>